# LFSDesktopProject

./: .gitignore  News  README.md  buildall  debug.h  dropboxlinks  makeall  makepackages  purgeall
LFSApplications/: ChangeLog  Makefile  Makefile.am  Makefile.in  config.h  config.status  configure  configure.ac  lfsapplications.mpz  remakesourcelist
LFSApplications/LFSApplications/: sources
LFSApplications/LFSApplications/app/: Makefile  Makefile.am  Makefile.in
LFSApplications/LFSApplications/resources/: lfslaunchpanels
LFSApplications/LFSApplications/resources/desktopdata/: lfsappearance.desktop  lfsdesktopprefs.desktop  lfspanelprefs.desktop  lfsprefsgroup.desktop  lfstkappearance.desktop  lfstkprefs.desktop  lfswallpaperprefs.desktop  lfswmprefs.desktop
LFSApplications/LFSApplications/resources/man/: lfsapplications.1
LFSApplications/LFSApplications/src/: lfsabout.cpp  lfsappearance.cpp  lfsbackdropprefs.cpp  lfsdesktopprefs.cpp  lfspanelprefs.cpp  lfspanelprefs.h  lfsprefsgroup.cpp  lfstkappearance.cpp  lfstkprefs.cpp  lfswmprefs.cpp
LFSApplications/LFSApplications/src/.deps/: lfsabout-lfsabout.Po  lfsappearance-lfsappearance.Po  lfsbackdropprefs-lfsbackdropprefs.Po  lfsdesktopprefs-lfsdesktopprefs.Po  lfspanelprefs-lfspanelprefs.Po  lfstkprefs-lfstkprefs.Po  lfswmprefs-lfswmprefs.Po
LFSApplications/autom4te.cache/: output.1  requests  traces.0  traces.1
LFSDesktop/: ChangeLog  Makefile  Makefile.am  Makefile.in  SetPrefsFromXFConf  config.h  config.h.in  config.status  configure  configure.ac  lfsdesktop.mpz  lfsmanpage.mpz  remakesourcelist
LFSDesktop/LFSDesktop/: flagsandlibs  sources
LFSDesktop/LFSDesktop/app/: Makefile  Makefile.am  Makefile.in
LFSDesktop/LFSDesktop/debug/: Makefile.am
LFSDesktop/LFSDesktop/helper/: Makefile  Makefile.am  Makefile.in  appMenu.cpp  appmenu  lfsdialog.cpp  lfshelper  lfshelper.cpp
LFSDesktop/LFSDesktop/helper/.deps/: lfshelper.Po
LFSDesktop/LFSDesktop/resources/: appmenu
LFSDesktop/LFSDesktop/resources/man/: lfsdesktop.1
LFSDesktop/LFSDesktop/src/: disks.cpp  disks.h  files.cpp  files.h  globals.cpp  globals.h  graphics.cpp  graphics.h  main.cpp  prefs.cpp  prefs.h
LFSDesktop/LFSDesktop/src/.deps/: disks.Po  files.Po  globals.Po  graphics.Po  main.Po  prefs.Po
LFSDesktop/autom4te.cache/: output.0  requests  traces.0  traces.1
LFSPanel/: ChangeLog  Makefile  Makefile.in  config.h  config.status  configure  configure.ac  lfspanel.mpz
LFSPanel/LFSPanel/app/: Makefile  Makefile.am  Makefile.in
LFSSetWallpaper/: ChangeLog  Makefile  Makefile.in  config.h  config.status  configure  configure.ac  lfssetwallpaper.mpz
LFSToolKit/: CPPScript.cpp  ChangeLog  Makefile  Makefile.am  Makefile.in  aclocal.m4  config.h  config.status  configure  configure.ac  exportmap  lfstoolkit.pc  libtool  remakesourcelist  sources
LFSToolKit.HOLD/: configure.ac
LFSToolKit/LFSToolKit/: flagsandlibs  headers  sources
LFSToolKit/LFSToolKit/app/: Makefile  Makefile.am  Makefile.in  liblfstoolkit.la
LFSToolKit/LFSToolKit/app/.libs/: liblfstoolkit.la  liblfstoolkit.lai  liblfstoolkit.so.0  liblfstoolkit.so.0.1.0
LFSToolKit/LFSToolKit/helper/: Makefile.am  Makefile.in  lfstkprefs.cpp
LFSToolKit/LFSToolKit/helper/.deps/: appMenu.Po
LFSToolKit/LFSToolKit/src/: Doxyfile  LFSTKButton.cpp  LFSTKButton.h  LFSTKGadget.cpp  LFSTKGadget.h  LFSTKGlobals.h  LFSTKImage.cpp  LFSTKImage.h  LFSTKLabel.cpp  LFSTKLabel.h  LFSTKLib.cpp  LFSTKLib.h  LFSTKLineEdit.cpp  LFSTKLineEdit.h  LFSTKMenuButton.cpp  LFSTKMenuButton.h  LFSTKToggleButton.cpp  LFSTKToggleButton.h  LFSTKWindow.cpp  LFSTKWindow.h  LFSTK_lib.cpp  LFSTK_lib.h  LFSTKlib.cpp  LFSTKlib.h  LFSTKwindow.cpp  LFSTKwindow.h  exportmap  html  lfstoolkit.cpp  lib.cpp  lib.h  liblfstoolkit_la-LFSTKButton.lo  liblfstoolkit_la-LFSTKGadget.lo  liblfstoolkit_la-LFSTKImage.lo  liblfstoolkit_la-LFSTKLabel.lo  liblfstoolkit_la-LFSTKLib.lo  liblfstoolkit_la-LFSTKLineEdit.lo  liblfstoolkit_la-LFSTKMenuButton.lo  liblfstoolkit_la-LFSTKToggleButton.lo  liblfstoolkit_la-LFSTKWindow.lo  (+1 more)
LFSToolKit/LFSToolKit/src/.deps/: liblfstoolkit_la-LFSTKButton.Plo  liblfstoolkit_la-LFSTKGadget.Plo  liblfstoolkit_la-LFSTKImage.Plo  liblfstoolkit_la-LFSTKLabel.Plo  liblfstoolkit_la-LFSTKLib.Plo  liblfstoolkit_la-LFSTKLineEdit.Plo  liblfstoolkit_la-LFSTKMenuButton.Plo  liblfstoolkit_la-LFSTKToggleButton.Plo  liblfstoolkit_la-LFSTKWindow.Plo
LFSToolKit/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
LFSToolKit/docs/: Doxyfile  Doxyfile.in  Makefile  Makefile.am  Makefile.in
LFSToolKit/examples/: aboutbox.cpp  appMenu.cpp  appMenu2.cpp  gadgets.cpp  prefs.cpp  querybox.cpp
LFSToolKit/src/: lfstoolkit.cpp
LFSWManager/: ChangeLog  Makefile  Makefile.am  Makefile.in  config.h  config.status  configure  configure.ac  lfswmanager.mpz
LFSWManager/LFSWManager/: flagsandlibs  sources
LFSWManager/LFSWManager/app/: Makefile  Makefile.am  Makefile.in
LFSWManager/LFSWManager/helper/: Makefile  Makefile.am  Makefile.in  appMenu.cpp
LFSWManager/LFSWManager/resources/man/: lfswmanager.1
LFSWManager/LFSWManager/src/: Makefile  Makefile.am  Makefile.in  appmenu.cpp  appmenu.h  atoms.cpp  atoms.h  button.cpp  button.h  client.cpp  client.h  dragger.cpp  dragger.h  events.cpp  ewmh.cpp  ewmh.h  frame.cpp  frame.h  keyboard.cpp  lib.cpp  lib.h  list.h  main.cpp  mwm.cpp  mwm.h  mywindow.h  netwm.cpp  prefs.cpp  prefs.h  root.cpp  root.h  settings.cpp  settings.h  tabwin.cpp  wind.cpp  wind.h  x11font.cpp  x11font.h  xftfont.cpp
LFSWManager/LFSWManager/src.wind/: button.h  client.cpp  dragger.h  ewmh.h  frame.h  lib.cpp  list.h  main.cpp  mwm.h  root.cpp  wind.h  xftfont.cpp
LFSWManager/LFSWManager/src/.deps/: lfswmanager-button.Po  lfswmanager-client.Po  lfswmanager-dragger.Po  lfswmanager-ewmh.Po  lfswmanager-frame.Po  lfswmanager-lib.Po  lfswmanager-main.Po  lfswmanager-mwm.Po  lfswmanager-root.Po  lfswmanager-wind.Po  lfswmanager-x11font.Po  lfswmanager-xftfont.Po
LFSWManager/autom4te.cache/: output.1  requests  traces.0  traces.1
XFWManager/XFWManager/app/: Makefile.am
(+74 files in other folders)
