#
#
AC_INIT([LFSDesktop],[0.0.13],[LFSDesktop],[LFSDesktop])

AC_CONFIG_HEADER([config.h])
AC_PROG_CXX

AM_INIT_AUTOMAKE

AC_PROG_CC
AC_HEADER_STDC

AC_SUBST(CFLAGS)
AC_SUBST(CPPFLAGS)
AC_SUBST(LDFLAGS)

CFLAGS=-Wall
AC_SUBST(CFLAGS)

X11_MODULES="x11 >= 1.6.2"
PKG_CHECK_MODULES(X11, $X11_MODULES)
AC_SUBST(X11_LIBS)
AC_SUBST(X11_CFLAGS)

XINERAMA_MODULES="xinerama >= 1.1.3"
PKG_CHECK_MODULES(XINERAMA, $XINERAMA_MODULES)
AC_SUBST(XINERAMA_LIBS)
AC_SUBST(XINERAMA_CFLAGS)

XEXT_MODULES="xext >= 1.3.3"
PKG_CHECK_MODULES(XEXT, $XEXT_MODULES)
AC_SUBST(XEXT_LIBS)
AC_SUBST(XEXT_CFLAGS)

XFT_MODULES="xft >= 2.3.2"
PKG_CHECK_MODULES(XFT, $XFT_MODULES)
AC_SUBST(XFT_CFLAGS)
AC_SUBST(XFT_LIBS)

CAIRO_MODULES="cairo >= 1.14.0"
PKG_CHECK_MODULES(CAIRO, $CAIRO_MODULES)
AC_SUBST(CAIRO_LIBS)
AC_SUBST(CAIRO_CFLAGS)

LIBUDEV_MODULES="libudev >= 216"
PKG_CHECK_MODULES(LIBUDEV, $LIBUDEV_MODULES)
AC_SUBST(LIBUDEV_LIBS)
AC_SUBST(LIBUDEV_CFLAGS)

AC_MSG_CHECKING(Use SUID Helper)

AC_ARG_ENABLE(suidhelper,AS_HELP_STRING([--enable-suidhelper],[Enable suid helper]),[enable_suidhelper=$enableval],[enable_suidhelper="yes"])
if test $enable_suidhelper = "yes" ;then
	AC_DEFINE([_USESUIDHELPER_], [], [Use suid helper])
fi
AC_MSG_RESULT($enable_suidhelper)

AC_OUTPUT(Makefile LFSDesktop/app/Makefile LFSDesktop/helper/Makefile)

