#
#

m4_define([LFSTOOLKIT_MAJ_N],[0])
m4_define([LFSTOOLKIT_MIN_N],[0])
m4_define([LFSTOOLKIT_REV_N],[2])

AC_INIT([LFSToolKit],[0.0.5],[PROJ],[LFSToolKit])

AC_CONFIG_HEADER([config.h])
AC_PROG_CXX

AM_INIT_AUTOMAKE

AC_PROG_CC
AC_HEADER_STDC
LT_INIT([disable-static])

# libtool
LFSTOOLKIT_MINOR=LFSTOOLKIT_MIN_N()
LFSTOOLKIT_INTERFACE=$(( LFSTOOLKIT_MAJ_N() + ${LFSTOOLKIT_MINOR} ))
LFSTOOLKIT_REVISION=LFSTOOLKIT_REV_N()
LFSTOOLKIT_LIBTOOL_VERSION=$LFSTOOLKIT_INTERFACE:$LFSTOOLKIT_REVISION:$LFSTOOLKIT_MINOR

AC_SUBST(LFSTOOLKIT_LIBTOOL_VERSION)

X11_MODULES="x11 >= 1.6.2"
PKG_CHECK_MODULES(X11, $X11_MODULES)
AC_SUBST(X11_CFLAGS)
AC_SUBST(X11_LIBS)

XFT_MODULES="xft >= 2.3.2"
PKG_CHECK_MODULES(XFT, $XFT_MODULES)
AC_SUBST(XFT_CFLAGS)
AC_SUBST(XFT_LIBS)

AC_OUTPUT(Makefile LFSToolKit/app/Makefile)

