#
#
AC_INIT([LFSWManager],[0.0.1],[PROJ],[LFSWManager])

AC_CONFIG_HEADER([config.h])
AC_PROG_CXX

AM_INIT_AUTOMAKE

AC_PROG_CC
AC_HEADER_STDC

AC_SUBST(CFLAGS)
AC_SUBST(CPPFLAGS)
AC_SUBST(LDFLAGS)
AM_PROG_CC_C_O

CXXFLAGS=-Wall
AC_SUBST(CXXFLAGS)

CFLAGS=-Wall
AC_SUBST(CFLAGS)

GTK_MODULES="gtk+-2.0 >= 2.24.0"
PKG_CHECK_MODULES(GTK, $GTK_MODULES)
AC_SUBST(GTK_CFLAGS)
AC_SUBST(GTK_LIBS)

GLIB_MODULES="glib-2.0 >= 2.43.2"
PKG_CHECK_MODULES(GLIB, $GLIB_MODULES)
AC_SUBST(GLIB_CFLAGS)
AC_SUBST(GLIB_LIBS)

XFCE4UI_MODULES="libxfce4ui-1 >= 4.10.0"
PKG_CHECK_MODULES(XFCE4UI, $XFCE4UI_MODULES)
AC_SUBST(XFCE4UI_CFLAGS)
AC_SUBST(XFCE4UI_LIBS)

XFCE4UTIL_MODULES="libxfce4util-1.0 >= 4.10.0"
PKG_CHECK_MODULES(XFCE4UTIL, $XFCE4UTIL_MODULES)
AC_SUBST(XFCE4UTIL_CFLAGS)
AC_SUBST(XFCE4UTIL_LIBS)

XFCE4KBD_MODULES="libxfce4kbd-private-2 >= 4.10.0"
PKG_CHECK_MODULES(XFCE4KBD, $XFCE4KBD_MODULES)
AC_SUBST(XFCE4KBD_CFLAGS)
AC_SUBST(XFCE4KBD_LIBS)

XFCONF_MODULES="libxfconf-0 >= 4.10.0"
PKG_CHECK_MODULES(XFCONF, $XFCONF_MODULES)
AC_SUBST(XFCONF_CFLAGS)
AC_SUBST(XFCONF_LIBS)

XEXT_MODULES="xext >= 1.3.3"
PKG_CHECK_MODULES(XEXT, $XEXT_MODULES)
AC_SUBST(XEXT_CFLAGS)
AC_SUBST(XEXT_LIBS)

X11_MODULES="x11 >= 1.6.2"
PKG_CHECK_MODULES(X11, $X11_MODULES)
AC_SUBST(X11_CFLAGS)
AC_SUBST(X11_LIBS)

XCOMPOSITE_MODULES="xcomposite >= 0.4.4"
PKG_CHECK_MODULES(XCOMPOSITE, $XCOMPOSITE_MODULES)
AC_SUBST(XCOMPOSITE_CFLAGS)
AC_SUBST(XCOMPOSITE_LIBS)

XDAMAGE_MODULES="xdamage >= 1.1.4"
PKG_CHECK_MODULES(XDAMAGE, $XDAMAGE_MODULES)
AC_SUBST(XDAMAGE_CFLAGS)
AC_SUBST(XDAMAGE_LIBS)

XRENDER_MODULES="xrender >= 0.9.8"
PKG_CHECK_MODULES(XRENDER, $XRENDER_MODULES)
AC_SUBST(XRENDER_CFLAGS)
AC_SUBST(XRENDER_LIBS)

XFIXES_MODULES="xfixes >= 5.0.1"
PKG_CHECK_MODULES(XFIXES, $XFIXES_MODULES)
AC_SUBST(XFIXES_CFLAGS)
AC_SUBST(XFIXES_LIBS)

#AC_DEFINE([HAVE_COMPOSITOR], [1], [Define to enable compositor])
AC_DEFINE([HAVE_RENDER], [1], [Define to enable render])

AC_OUTPUT(Makefile LFSWManager/app/Makefile)

