#
#
AC_INIT([LFSWManager],[0.0.4],[PROJ],[LFSWManager])

AC_CONFIG_HEADER([config.h])
AC_PROG_CXX

AM_INIT_AUTOMAKE

AC_PROG_CC
AC_HEADER_STDC

AC_SUBST(CFLAGS)
AC_SUBST(CPPFLAGS)
AC_SUBST(LDFLAGS)
AM_PROG_CC_C_O

CXXFLAGS=-Wall
AC_SUBST(CXXFLAGS)

CFLAGS=-Wall
AC_SUBST(CFLAGS)

XEXT_MODULES="xext >= 1.3.3"
PKG_CHECK_MODULES(XEXT, $XEXT_MODULES)
AC_SUBST(XEXT_CFLAGS)
AC_SUBST(XEXT_LIBS)

X11_MODULES="x11 >= 1.6.2"
PKG_CHECK_MODULES(X11, $X11_MODULES)
AC_SUBST(X11_CFLAGS)
AC_SUBST(X11_LIBS)

XCOMPOSITE_MODULES="xcomposite >= 0.4.4"
PKG_CHECK_MODULES(XCOMPOSITE, $XCOMPOSITE_MODULES)
AC_SUBST(XCOMPOSITE_CFLAGS)
AC_SUBST(XCOMPOSITE_LIBS)

XDAMAGE_MODULES="xdamage >= 1.1.4"
PKG_CHECK_MODULES(XDAMAGE, $XDAMAGE_MODULES)
AC_SUBST(XDAMAGE_CFLAGS)
AC_SUBST(XDAMAGE_LIBS)

XRENDER_MODULES="xrender >= 0.9.8"
PKG_CHECK_MODULES(XRENDER, $XRENDER_MODULES)
AC_SUBST(XRENDER_CFLAGS)
AC_SUBST(XRENDER_LIBS)

XFIXES_MODULES="xfixes >= 5.0.1"
PKG_CHECK_MODULES(XFIXES, $XFIXES_MODULES)
AC_SUBST(XFIXES_CFLAGS)
AC_SUBST(XFIXES_LIBS)


AC_OUTPUT(Makefile LFSWManager/app/Makefile)

