AUTOMAKE_OPTIONS = subdir-objects

include ../flagsandlibs

lfstkappearance_SOURCES = ../src/lfstkappearance.cpp
lfstkappearance_CFLAGS = -O3
lfstkappearance_CXXFLAGS = -O3

lfswmprefs_SOURCES = ../src/lfswmprefs.cpp
lfswmprefs_CFLAGS = -O3
lfswmprefs_CXXFLAGS = -O3

lfsdesktopprefs_SOURCES = ../src/lfsdesktopprefs.cpp
lfsdesktopprefs_CFLAGS = -O3
lfsdesktopprefs_CXXFLAGS = -O3

man1_MANS = ../resources/man/lfsapplications.1

bin_PROGRAMS = lfstkappearance lfswmprefs lfsdesktopprefs

