AUTOMAKE_OPTIONS = subdir-objects

include ../flagsandlibs

lfstkprefs_SOURCES = ../src/lfstkprefs.cpp
lfstkprefs_CFLAGS = -O3
lfstkprefs_CXXFLAGS = -O3

lfswmprefs_SOURCES = ../src/lfswmprefs.cpp
lfswmprefs_CFLAGS = -O3
lfswmprefs_CXXFLAGS = -O3

lfsdesktopprefs_SOURCES = ../src/lfsdesktopprefs.cpp
lfsdesktopprefs_CFLAGS = -O3
lfsdesktopprefs_CXXFLAGS = -O3

lfsappearance_SOURCES = ../src/lfsappearance.cpp
lfsappearance_CFLAGS = -O3
lfsappearance_CXXFLAGS = -O3

lfsbackdropprefs_SOURCES = ../src/lfsbackdropprefs.cpp
lfsbackdropprefs_CFLAGS = -O3 
lfsbackdropprefs_CXXFLAGS = -O3

lfspanelprefs_SOURCES = ../src/lfspanelprefs.cpp
lfspanelprefs_CFLAGS = -O3 
lfspanelprefs_CXXFLAGS = -O3

lfsabout_SOURCES = ../src/lfsabout.cpp
lfsabout_CFLAGS = -O3 
lfsabout_CXXFLAGS = -O3

man1_MANS = ../resources/man/lfsapplications.1

bin_PROGRAMS = lfstkprefs lfswmprefs lfsdesktopprefs lfsappearance lfsbackdropprefs lfspanelprefs lfsabout

