AUTOMAKE_OPTIONS = subdir-objects

include ../flagsandlibs
include ../sources

lfspanel_SOURCES = $(COMMONSRC)

man1_MANS = ../resources/man/lfspanel.1

scriptfilesdir = $(pkgdatadir)/scripts
scriptfiles_SCRIPTS = ../resources/scripts/*

pixfilesdir = $(pkgdatadir)/pixmaps
pixfiles_DATA = ../resources/pixmaps/*

bin_PROGRAMS = lfspanel

